# cryoem-services

./: #setup.cfg  .azure-pipelines.yml  .bumpversion.cfg  .bumpversion.toml  .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg
.azure-pipelines/: ci.yml
.github/: renovate.json
.github/workflows/: codeql.yml  publish-to-pypi.yaml  publish-version.yml  python-app.yml  test-and-publish.yml  test.yml  version-bump.yml
Dockerfiles/: README.md  class_selection  cryoemservices_cpu  cryoemservices_gpu  cryoemservices_relion  cryolo  ctffind  easymode  icebreaker  motioncor2  motioncor_relion  motioncorr  relion  segmentation  tomo_align  tomo_align_imod  topaz
Helm/: Chart.yaml  values.yaml
Helm/charts/bfactor_setup/: Chart.yaml
Helm/charts/clem_align_and_merge/: Chart.yaml
Helm/charts/clem_process_raw_lifs/: Chart.yaml
Helm/charts/clem_process_raw_tiffs/: Chart.yaml
Helm/charts/cluster_submission/: Chart.yaml
Helm/charts/correlative_align_images/: Chart.yaml
Helm/charts/cryolo/: Chart.yaml
Helm/charts/cryolo_gpu/: Chart.yaml
Helm/charts/ctffind/: Chart.yaml
Helm/charts/denoise/: Chart.yaml
Helm/charts/denoise_iris/: Chart.yaml
Helm/charts/denoise_slurm/: Chart.yaml
Helm/charts/dispatcher/: Chart.yaml
Helm/charts/easymode/: Chart.yaml
Helm/charts/extract/: Chart.yaml
Helm/charts/extract_class/: Chart.yaml
Helm/charts/icebreaker/: Chart.yaml
Helm/charts/images/: Chart.yaml
Helm/charts/ispyb/: Chart.yaml
Helm/charts/ispyb_connector/: Chart.yaml
Helm/charts/membrain_seg/: Chart.yaml
Helm/charts/monitor_refine/: Chart.yaml
Helm/charts/motioncorr/: Chart.yaml
Helm/charts/motioncorr_slurm/: Chart.yaml
Helm/charts/node_creator/: Chart.yaml
Helm/charts/postprocess/: Chart.yaml
Helm/charts/process_recipe/: Chart.yaml
Helm/charts/reextract/: Chart.yaml
Helm/charts/select_classes/: Chart.yaml
Helm/charts/select_particles/: Chart.yaml
Helm/charts/tomo_align/: Chart.yaml
Helm/charts/tomo_align_aretomo/: Chart.yaml
Helm/charts/tomo_align_aretomo_slurm/: Chart.yaml
Helm/charts/tomo_align_imod/: Chart.yaml
Helm/charts/tomo_align_slurm/: Chart.yaml
installers/: README.md
recipes/: b24-tomo-align.json  clem-align-and-merge-wrapper.json  clem-align-and-merge.json  clem-lif-to-stack-wrapper.json  clem-lif-to-stack.json  clem-tiff-to-stack-wrapper.json  clem-tiff-to-stack.json  em-spa-bfactor.json  em-spa-class2d.json  em-spa-class3d.json  em-spa-extract.json  em-spa-preprocess.json  em-spa-refine.json  em-tomo-align.json  em-tomo-preprocess.json  ispyb-relion.json
recipes/ispyb/: clem-align-and-merge-wrapper.json  clem-align-and-merge.json  clem-lif-to-stack-wrapper.json  clem-lif-to-stack.json  clem-tiff-to-stack-wrapper.json  clem-tiff-to-stack.json  correlative-align-images.json  em-spa-bfactor-wrapper.json  em-spa-class2d-wrapper.json  em-spa-class3d-wrapper.json  em-spa-preprocess.json  em-spa-refine-wrapper.json  em-tomo-align.json  em-tomo-preprocess.json  sxt-aretomo.json  sxt-imod-beads-wbp.json  sxt-imod-patch-wbp.json
recipes/murfey/: em-spa-bfactor.json  em-spa-class2d.json  em-spa-class3d.json  em-spa-preprocess.json  em-spa-refine.json
src/cryoemservices/: __init__.py
src/cryoemservices/clem/: images.py  lif.py  tiff.py  xml.py
src/cryoemservices/cli/: __init__.py  clem_align_and_merge.py  clem_lif_to_stack.py  clem_process_raw_lifs.py  clem_process_raw_tiffs.py  clem_process_stacks.py  clem_tiff_to_stack.py  dlq_check.py  dlq_purge.py  dlq_rabbitmq.py  dlq_reinject.py  generate_session_report.py  lif_to_stack.py  lif_to_tiff.py  project_linker.py  resubmit_wrapper.py  run_wrapper.py  start_service.py  tiff_to_stack.py  wrap.py
src/cryoemservices/pipeliner_plugins/: reextract.py  (+6 more)
tests/cli/: test_clem_align_and_merge.py  test_clem_align_and_merge_cli.py  test_clem_lif_to_stack_cli.py  test_clem_process_raw_lifs_cli.py  test_clem_process_raw_tiffs_cli.py  test_clem_tiff_to_stack.py  test_clem_tiff_to_stack_cli.py  test_dlq_rabbitmq.py  test_generate_session_report.py  test_project_linker.py  test_resubmit_wrapper.py  test_run_wrapper.py  test_start_service.py
tests/pipeliner_plugins/: test_angular_distribution_plot.py  test_angular_efficiency.py  test_combine_star_files.py  test_reextract.py  test_symmetry_finder.py
tests/recipes/: test_recipes.py
tests/services/: test_bfactor_setup.py  test_class2d.py  test_class3d.py  test_clem_align_and_merge_service.py  test_clem_process_raw_lifs_service.py  test_clem_process_raw_tiffs_service.py  test_cluster_submission.py  test_common_service.py  test_correlative_align_images_service.py  test_cryolo_service.py  test_ctffind_service.py  test_denoise.py  test_denoise_slurm.py  test_easymode.py  test_extract_class.py  test_extract_service.py  test_icebreaker_service.py  test_images_plugins.py  test_images_service.py  test_ispyb_service.py  test_membrain_seg.py  test_motioncorr_service.py  test_motioncorr_slurm_service.py  test_murfey_db_service.py  test_node_creator.py  test_postprocess.py  test_process_recipe.py  test_refine3d.py  test_select_classes_service.py  test_select_particles_service.py  test_tomo_align.py  test_tomo_align_aretomo.py  test_tomo_align_aretomo_slurm.py  test_tomo_align_imod.py  test_tomo_align_slurm.py  test_topaz_pick.py
tests/test_utils/: clem.py  config.py  fib.py  image_processing.py  tem.py
tests/util/: clem.py  test_align_images_using_mmi.py  test_align_images_using_neighbors.py  test_align_images_using_orb.py  test_clem_array_functions.py  test_clem_metadata.py  test_drift_correct_image.py  test_embeddings.py  test_image_processing.py  test_ispyb_commands.py  test_murfey_db_commands.py  test_process_recipe_tools.py  test_slurm_submission.py
tests/wrappers/: test_class2d_wrapper.py  test_class3d_wrapper.py  test_clem_align_and_merge.py  test_clem_align_and_merge_wrapper.py  test_clem_process_raw_lifs.py  test_clem_process_raw_lifs_wrapper.py  test_clem_process_raw_tiffs.py  test_clem_process_raw_tiffs_wrapper.py  test_refine3d_wrapper.py
(+139 files in other folders)
