[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.6.0",
    "wheel",
]

[project]
name = "cryoemservices"
version = "1.3.2"
description = "Services for CryoEM processing"
readme = "README.md"
keywords = [
    "cryoem-services",
]
license = { file = "LICENSE" }
authors = [
    { name = "Diamond Light Source - Data Analysis et al.", email = "dataanalysis@diamond.ac.uk" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "defusedxml", # CLEM workflow
    "gemmi==0.6.5",
    "graypy",
    "healpy",
    "icebreaker-em",
    "ispyb>=11.0.5",
    "mrcfile",
    "numpy<2",
    "pillow",
    "plotly",
    "pydantic>=2",
    "pystackreg", # CLEM workflow
    "readlif", # CLEM workflow
    "requests",
    "SimpleITK", # CLEM workflow
    "starfile",
    "stomp-py>8.1.1",
    "tifffile", # CLEM workflow
    "txrm2tiff",
    "workflows>=3",
]
[project.optional-dependencies]
dev = [
    "bump-my-version",
    "ipykernel",
    "pre-commit",
    "pytest",
    "pytest-datafiles",
    "pytest-mock",
]
torch = [
    "membrain-seg",
    "topaz-em",
]
[project.urls]
    Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
    GitHub = "https://github.com/DiamondLightSource/cryoem-services"
[project.scripts]
    "clem.align_and_merge" = "cryoemservices.cli.clem_align_and_merge:run"
    "clem.process_raw_lifs" = "cryoemservices.cli.clem_process_raw_lifs:run"
    "clem.process_raw_tiffs" = "cryoemservices.cli.clem_process_raw_tiffs:run"
    "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
    "cryoemservices.angular_distribution_plot" = "cryoemservices.pipeliner_plugins.angular_distribution_plot:run"
    "cryoemservices.angular_efficiency" = "cryoemservices.pipeliner_plugins.angular_efficiency:run"
    "cryoemservices.dlq_rabbitmq" = "cryoemservices.cli.dlq_rabbitmq:run"
    "cryoemservices.find_symmetry" = "cryoemservices.pipeliner_plugins.symmetry_finder:run"
    "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
    "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
    "cryoemservices.service" = "cryoemservices.cli.start_service:run"
    "cryoemservices.wrap" = "cryoemservices.cli.run_wrapper:run"
    "relipy.link" = "cryoemservices.cli.project_linker:run"
[project.entry-points."ccpem_pipeliner.jobs"]
    "combine_star_files_job" = "cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles"
[project.entry-points."cryoemservices.services"]
    BFactor = "cryoemservices.services.bfactor_setup:BFactor"
    CLEMAlignAndMerge = "cryoemservices.services.clem_align_and_merge:AlignAndMergeService"
    CLEMProcessRawLIFs = "cryoemservices.services.clem_process_raw_lifs:ProcessRawLIFsService"
    CLEMProcessRawTIFFs = "cryoemservices.services.clem_process_raw_tiffs:ProcessRawTIFFsService"
    CTFFind = "cryoemservices.services.ctffind:CTFFind"
    Class2D = "cryoemservices.services.class2d:Class2D"
    Class3D = "cryoemservices.services.class3d:Class3D"
    ClusterSubmission = "cryoemservices.services.cluster_submission:ClusterSubmission"
    CrYOLO = "cryoemservices.services.cryolo:CrYOLO"
    Denoise = "cryoemservices.services.denoise:Denoise"
    DenoiseSlurm = "cryoemservices.services.denoise_slurm:DenoiseSlurm"
    EMISPyB = "cryoemservices.services.ispyb_connector:EMISPyB"
    Extract = "cryoemservices.services.extract:Extract"
    ExtractClass = "cryoemservices.services.extract_class:ExtractClass"
    IceBreaker = "cryoemservices.services.icebreaker:IceBreaker"
    Images = "cryoemservices.services.images:Images"
    MembrainSeg = "cryoemservices.services.membrain_seg:MembrainSeg"
    MotionCorr = "cryoemservices.services.motioncorr:MotionCorr"
    NodeCreator = "cryoemservices.services.node_creator:NodeCreator"
    PostProcess = "cryoemservices.services.postprocess:PostProcess"
    ProcessRecipe = "cryoemservices.services.process_recipe:ProcessRecipe"
    Refine3D = "cryoemservices.services.refine3d:Refine3D"
    SelectClasses = "cryoemservices.services.select_classes:SelectClasses"
    SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
    TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
    TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
    TopazPick = "cryoemservices.services.topaz_pick:TopazPick"
[project.entry-points."cryoemservices.services.images.plugins"]
    "mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
    "mrc_projection" = "cryoemservices.services.images_plugins:mrc_projection"
    "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
    "mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
    "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
    "picked_particles_3d_apng" = "cryoemservices.services.images_plugins:picked_particles_3d_apng"
    "picked_particles_3d_central_slice" = "cryoemservices.services.images_plugins:picked_particles_3d_central_slice"
    "tilt_series_alignment" = "cryoemservices.services.images_plugins:tilt_series_alignment"
[project.entry-points."cryoemservices.services.process_recipe.filters"]
    ispyb = "cryoemservices.util.process_recipe_tools:ispyb_filter"
[project.entry-points."cryoemservices.wrappers"]
    CLEMAlignAndMerge = "cryoemservices.wrappers.clem_align_and_merge:AlignAndMergeWrapper"
    CLEMProcessRawLIFs = "cryoemservices.wrappers.clem_process_raw_lifs:ProcessRawLIFsWrapper"
    CLEMProcessRawTIFFs = "cryoemservices.wrappers.clem_process_raw_tiffs:ProcessRawTIFFsWrapper"
    Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
    Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
    Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false
[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
line-length = 88
lint.extend-ignore = ["E203", "E266", "E501", "E731", "E741"]
lint.select = [
    "C4",
    "E4", "E7", "E9",
    "F",
    "I",
    "W6",
]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["cryoemservices"]
combine-as-imports = true

[tool.ruff.format]
quote-style="double"
indent-style="space"
line-ending="auto"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.12"

[tool.pytest.ini_options]
pythonpath= ["."]
